# TheCropLanguage

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.fleet/: run.json
addons/: CMakeLists.txt  interpretaddon.cpp
addons/include/: cropaddon.h  datas.h
addons/interpret/: interpretaddon.cpp  utils.cpp  variables.cpp
addons/interpret/include/: utils.h  variables.h
src/: datas.h  utils.cpp  utils.h
src/code/: datas.h  variable_parser.cpp
src/compileraddon/: addon_loader.cpp
src/parser/: code.cpp  code_parser.cpp  parser_utility.h  project_parser.cpp
tests/: calc_test.crop  helloworld.crop  plan.crop  variable_test.crop
tests/project_test/: project.crop
tests/project_test/src/: main.crop  sub.crop
